[tool.poetry]
package-mode = true
name = "darum"
version = "0.1.0"
description = "DAfny Resource Usage Measurement"
authors = ["Horacio Mijail Anton Quiles <horacio.mijail@consensys.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quantiphy = "^2.19"
hvplot = "^0.9.2"




[tool.poetry.group.dev.dependencies]
#ipykernel = "^6.29.4"
pandas-stubs = "^2.2.2.240603"
pyinstrument = "^4.6.2"
scipy = "^1.13.0"

[tool.poetry.scripts]
plot_distribution = "darum.plot_distribution:main"
dafny_measure = "darum.dafny_measure:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
